削除機能の追加

--- a/src/assets/sass/prepends.scss
+++ b/src/assets/sass/prepends.scss
@@ -4,5 +4,6 @@ $color-primary: #ffc5e2;
 $color-primary-lighten: lighten($color-primary, 5%);
 $color-secondary: #ffda74;
 $color-font: #6c5558;
+$color-font-link: #6a72b9;
 $header-height: 64px;
 $form-height: 96px;
